* ext/bigdecimal/bigdecimal.c (BigDecimal_coerce): revert r23389,   which not only is unnecessary but also causes the inconsistency of   return type.  [ruby-core:25706] [Bug #2129]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27358 b2dd03c8-39d4-4d8f-98ff-823fe69b080e